--- a/environments/Production-8.yml
+++ b/environments/Production-8.yml
@@ -1,5 +1,11 @@
 fileVersion: 1
 id: "8"
-mappingDefinitions: {}
+mappingDefinitions:
+  SRC:
+    database: SNOWFLAKE_SAMPLE_DATA
+    schema: TPCDS_SF100TCL
+  TARGET:
+    database: TRAINING
+    schema: ASSIGNMENT
 name: Production
 type: Environment
