--- a/environments/UAT-15.yml
+++ b/environments/UAT-15.yml
@@ -2,8 +2,8 @@ fileVersion: 1
 id: "15"
 mappingDefinitions:
   SRC:
-    database: SNOWFLAKE_SAMPLE_DATA
-    schema: TPCH_SF1
+    database: TRAINING
+    schema: TEST
   TARGET:
     database: TRAINING
     schema: ASSIGNMENT
