--- a/nodes/TARGET-DIM_USERS_LOGIN_TIMESTAMP.yml
+++ b/nodes/TARGET-DIM_USERS_LOGIN_TIMESTAMP.yml
@@ -7,7 +7,7 @@ operation:
     preSQL: ""
     testsEnabled: true
   database: ""
-  deployEnabled: false
+  deployEnabled: true
   description: ""
   isMultisource: false
   locationName: TARGET
