--- a/nodes/TARGET-STG_USERS.yml
+++ b/nodes/TARGET-STG_USERS.yml
@@ -9,7 +9,7 @@ operation:
     testsEnabled: true
     truncateBefore: true
   database: ""
-  deployEnabled: false
+  deployEnabled: true
   description: ""
   isMultisource: false
   locationName: TARGET
