--- a/nodes/TARGET-DIM_USERS.yml
+++ b/nodes/TARGET-DIM_USERS.yml
@@ -7,7 +7,7 @@ operation:
     preSQL: ""
     testsEnabled: true
   database: ""
-  deployEnabled: true
+  deployEnabled: false
   description: ""
   isMultisource: false
   locationName: TARGET
